// Copyright 2023 Intrinsic Innovation LLC
// Intrinsic Proprietary and Confidential
// Provided subject to written agreement between the parties.

syntax = "proto3";

package intrinsic_proto.executive;

import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";

message BlackboardValue {
  string key = 1;
  string scope = 2;
  google.protobuf.Any value = 3;
}

service ExecutiveBlackboard {
  // Retrieves a specified blackboard value.
  rpc GetBlackboardValue(GetBlackboardValueRequest) returns (BlackboardValue) {}

  // List all available entries on the blackboard.
  rpc ListBlackboardValues(ListBlackboardValuesRequest)
      returns (ListBlackboardValuesResponse) {}

  // Update a specific value on the blackboard.
  rpc UpdateBlackboardValue(UpdateBlackboardValueRequest)
      returns (BlackboardValue) {}

  // Delete a specific value on the blackboard.
  rpc DeleteBlackboardValue(DeleteBlackboardValueRequest)
      returns (google.protobuf.Empty) {}
}

message GetBlackboardValueRequest {
  string key = 1;

  // A blackboard key is scoped based on where it is defined, use:
  // "PROCESS_TREE" for an item in the process tree. For example to
  // retrieve the return value of a skill that just ran. This is the default for
  // most use cases. This is the default, if scope is not set.
  // "SYSTEM_TREE" for an item within the system tree.
  // "GLOBAL" for global items, e.g., inflows.
  optional string scope = 2;
}

message ListBlackboardValuesRequest {
  // Limit the request to a specific scope. Will return all blackboard values,
  // if not set.
  optional string scope = 1;
}

message ListBlackboardValuesResponse {
  message BlackboardValueInfo {
    string key = 1;
    string scope = 2;
    string proto_type_full_name = 3;
  }

  repeated BlackboardValueInfo value_infos = 1;
}

message UpdateBlackboardValueRequest {
  BlackboardValue value = 1;
}

message DeleteBlackboardValueRequest {
  string key = 1;
  string scope = 2;
}
